Got angular application to work with SSO to the user webservice

--- a/web-portal/public/views/home.html
+++ b/web-portal/public/views/home.html
@@ -1,6 +1,6 @@
 <div>
-	<h1>Home</h1>
-	<div ng-show="!authenticated">">
-		<span>Click on the login link to authenticate</span>
-	</div>
+    <h1>Hi {{loggedInUserName}}</h1>
+    <div data-ng-show="!userAuthenticated">
+        <span>Click on the login link to authenticate</span>
+    </div>
 </div>
