Got the task functionality to work and cooler navigation

--- a/web-portal/public/views/user.html
+++ b/web-portal/public/views/user.html
@@ -1,5 +1,5 @@
 <div>
-	<h1>User Data</h1>
+	<h1>User Summary</h1>
     
     <div class="table-responsive">
         <table class="table table-striped">
@@ -10,7 +10,7 @@
             </tr>
             <tr data-ng-repeat="user in userDataArray">
                 <td> <a href="" id="{{user.userName}}" 
-                        data-ng-click="getUserDataByUserName(user.userName)">{{user.userName}}</a></td>
+                        data-ng-click="userController.getUserDataByUserName(user.userName)">{{user.userName}}</a></td>
                 <td><span>{{user.firstName}}</span></td>
                 <td><span>{{user.lastName}}</span></td>
             </tr>
@@ -18,6 +18,8 @@
     </div>
     
 	<div data-ng-show="userData">
+        <h1>User Details</h1>
+        
         <table class="table table-striped">
             <tr class="info">
                 <th>ID</th>
